      + Multiple manual browsers are supported.
      + Manual browsers are realized as top-level windows.
      + DDD no longer blocks while the manual is uncompressed and formatted.
      + DDD manuals are now stored in `gzip' format, saving space in
        executables.
    - New `What Next' help.  Gives a hint on what to do next,
      depending on current state.  Useful for beginners.
    - User-defined DDD commands.  DDD now provides a simple facility
      that allows the inferior debugger to execute DDD commands.  For
      details, see `User-Defined Commands' in the DDD manual.
    - For `Continue Until Here', DDD now sets a temporary breakpoint
      and continues (instead of using the GDB `until' command).  If
      the temporary breakpoint is not reached, it is deleted.
    - Using GDB, you can now alter the current execution position
      interactively - just drag and drop the execution arrow.  This
      allows you to back up - perhaps with more breakpoints set-over a
      portion of a program that has already executed, in order to
      examine its execution in more detail.
    - Breakpoints can be dragged and dropped, too.
    - Improved display of breakpoints and execution positions:
      + The current execution position is now properly cleared if
        undetermined (no source, program terminated, etc.)
      + If the program stopped due to a signal, this is indicated
        by a lightning symbol within the current execution glyph.
      + Faster scrolling.  While scrolling source or machine code at
        high speed, glyphs are now unmapped.  Slow scrolling still
        shows glyphs.
    - Resource files have been renamed.  All files are now located
      under `~/.ddd/'.  The file `~/.dddinit' has been replaced by
      `~/.ddd/init'; `~/.ddd_history' is now `~/.ddd/history'.  The
      new directory `~/.ddd/sessions/' contains saved DDD sessions.
    - Your favourite window manager should now show multi-color DDD